--- a/src/style.css
+++ b/src/style.css
@@ -5,3 +5,17 @@
 body {
     margin: 0;
 }
+
+nav {
+    display: flex;
+    align-items: center;
+    height: 70px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 3px 7.5px rgba(0, 0, 0, 0.1);
+}
+
+.img--logo {
+    margin-left: 30px;
+    width: 82px;
+    height: 25.35px;
+}
