--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,14 @@
 
 body {
     margin: 0;
+    background-color: #E5E5E5;
+}
+
+.app {
+    width: 550px;
+    margin: auto;
+    background-color: #FFFFFF;
+    font-family: Poppins;
 }
 
 nav {
@@ -18,4 +26,32 @@ nav {
     margin-left: 30px;
     width: 82px;
     height: 25.35px;
+}
+
+.hero {
+    display: flex;
+    flex-direction: column;
+}
+
+.img--hero {
+    width: 396px;
+    height: 232px;
+    align-self: center;
+    margin-top: 26px;
+}
+
+.hero > h1 {
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 40px;
+    margin: 32px 0 0 36px;
+}
+
+.hero > h3 {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 18px;
+    margin-top: 16px;
+    margin-left: 36px;
+    width: 320px;
 }
