--- a/src/style.css
+++ b/src/style.css
@@ -53,5 +53,84 @@ nav {
     line-height: 18px;
     margin-top: 16px;
     margin-left: 36px;
+    margin-bottom: 0;
     width: 320px;
 }
+
+.cards {
+    margin-left: 36px;
+}
+
+.card--main {
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 13px;
+}
+
+.status--exp {
+    position: absolute;
+    display: flex;
+    width: 61px;
+    height: 20px;
+    margin-left: 7px;
+    top: 527px;
+    background-color: #FFFFFF;
+}
+
+.status--exp > p {
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 11px;
+    margin: auto;
+}
+
+.img--card {
+    height: 235px;
+    width: 176px;
+    border-radius: 9px;
+    margin-top: 49px;
+}
+
+.card--main--rate--location {
+    display: flex;
+    margin-top: 6px;
+}
+
+.card--main--rate--location > img {
+    width: 14px;
+    height: 14px;
+    align-self: center;
+    margin-bottom: 2.5px;
+}
+
+.card--main--rate--location > p {
+    align-self: center;
+    margin-top: 0;
+    padding: 0 0 0 5px;
+    margin: 0;
+}
+
+.card--em--rate--location {
+    font-style: normal;
+    color: #918E9B;
+}
+
+.card--main--text {
+    margin: 6px 0;
+}
+
+.card--main--price {
+    margin: 8px 0;
+}
+
+.card--main--price > em {
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 13px;
+    font-style: normal;
+}
+
+.card--footer {
+    height: 30px;
+}
+
